# spotify-lyrics-tui

./: Cargo.toml  watch-logs.bat
src/: lyrics.rs  main.rs  media_manager.rs
src/media/: media_source.rs  mod.rs
src/media/media_sources/: mod.rs  windows.rs
src/models/: lyrics.rs  mod.rs  playback_status.rs  track.rs
src/widgets/: lyrics_view.rs  mod.rs
