[package]
name = "spotify-lyrics-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"

reqwest = { version = "0.13.2", features = ["json", "query"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
kakasi = "0.1.0"
regex = "=1.12.3"
tracing = "0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.4"
futures = "=0.3.32"

[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Media",
    "Media_Control",
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
